src/layout/_center.scss
// standard centerin
.center > * {
  --center-spacing: 0;
  --center-width: 0;

  max-width: var(--center-width);
  margin-left: auto;
  margin-right: auto;
  padding-left: var(--center-spacing);
  padding-right: var(--center-spacing);
}

// Class that can be set on a child that needs to be full width and not centered
.center-exception {
  max-width: none;
}

// Generate classes to set the padding of the .center
@each $name, $space in $feo-spacing {
  .center-g-#{$name} {
    --center-spacing: var(--spacing-#{$name});
  }
}

// Generate classes to set the width of the .center
@each $name, $size in $feo-sizes {
  .center-w-#{$name} > * {
    --center-width: var(--size-#{$name});
  }
}

